<resources>
    <string name="app_name">Note Nav</string>
    <string name="action_note">action_note</string>
    <string name="action_map">action_map</string>
    <string name="action_profile">action_profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="author">author</string>
    <string name="add_title">Add Title</string>
    <string name="note">Note!</string>
</resources>