<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/tvTitleDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="86dp"
        android:layout_marginTop="33dp"
        android:text="@string/title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="50dp" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/tvTitleDetail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="18dp"
        android:text="@string/content" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvContent"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="52dp"
        android:text="@string/author" />
</RelativeLayout>