<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NoteFragment">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/add_title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_below="@+id/etTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="23dp"
        android:autofillHints=""
        android:backgroundTint="#26C6DA"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/content"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etContent"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="68dp"
        android:text="@string/note"
        android:textColor="#000000" />
</RelativeLayout>